--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,12 +4,17 @@ spring:
   allow-circular-references: true
  datasource:
   url: jdbc:h2:mem:testdb
-  username: dbuser
-  password: dbpassword
-  driver-class-name: org.h2.Driver
-sql:
- init:
-  mode: always
-  data-locations: data.sql
-  schema-locations: schema.sql
+  initialization-mode: never
+
+ jpa:
+  generate-ddl: true
+  hibernate:
+   ddl-auto: create
+
+  properties:
+   hibernate:
+    format_sql: true
+
+  show-sql: true
+
 
