--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -4,7 +4,17 @@ spring:
   allow-circular-references: true
  datasource:
   url: jdbc:h2:mem:testdb
- sql:
-  init:
-   mode: always
-   data-locations: data.sql
+  initialization-mode: never
+
+ jpa:
+  generate-ddl: true
+  hibernate:
+   ddl-auto: create
+
+  properties:
+   hibernate:
+    format_sql: true
+
+  show-sql: true
+
+
